# server

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Connection.cpp  Connection.hpp  Connexion.cpp  Connexion.hpp  DatabaseConnection.cpp  DatabaseConnection.hpp  Entity.cpp  Entity.hpp  MessagePacker.cpp  MessagePacker.hpp  README.md  TCPConnection.cpp  TCPConnection.hpp  TCPListener.cpp  TCPListener.hpp  UUID.cpp  World.hpp  cmake_install.cmake  db.txt  main.cpp  properties.txt  tcpconnection.cpp  tcpconnection.hpp  uuid.hpp
cmake/: Findgoodform.cmake  Findplog.cmake
src/: Battle.hpp  CMakeLists.txt  Card.hpp  ClientThread.cpp  ClientThread.hpp  Entity.cpp  Entity.hpp  EntityContainer.hpp  MessagePacker.cpp  Notifiable.hpp  NotifiableThread.hpp  Player.hpp  SimpleConfig.cpp  SimpleConfig.hpp  TCPConnection.hpp  UUID.cpp  UUID.hpp  World.hpp  main.cpp
src/io/: FileStream.cpp  FileStream.hpp  MemoryStream.cpp  MemoryStream.hpp  Stream.cpp  Stream.hpp
src/net/: DatabaseConnection.cpp  DatabaseConnection.hpp  Network.cpp  Network.hpp  TCPConnection.cpp  TCPConnection.hpp  TCPListener.cpp  TCPListener.hpp  Types.hpp
src/net/msgtypes/: MsgType.hpp
src/platform/: Types.hpp
